// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterSection render footer section with hideInMobile 1`] = `
<div
  className=""
>
  <Text
    baseline={true}
    className="title"
    semiStrong={true}
  >
    About JobsDB
  </Text>
</div>
`;

exports[`FooterSection render footer section with icon 1`] = `""`;

exports[`FooterSection render footer section with subSessionMessage 1`] = `
<div
  className=""
>
  <Text
    baseline={true}
    className="title"
    semiStrong={true}
  >
    About JobsDB
  </Text>
  <SubFooterSection
    linkRenderer={[Function]}
    message={
      Object {
        "bdjobs": Object {
          "title": "Bdjobs (Bandladesh)",
          "url": "https://www.bdjobs.com/",
        },
        "brighterMonday": Object {
          "title": "Brighter Monday (East Africa)",
          "url": "https://www.brightermonday.com/",
        },
        "catho": Object {
          "title": "Catho (Brazil)",
          "url": "https://www.catho.com.br/",
        },
        "title": "International partners",
        "zhaopin": Object {
          "title": "Zhaopin (China)",
          "url": "https://www.zhaopin.com/",
        },
      }
    }
  />
</div>
`;

exports[`FooterSection render footer section with wrong message 1`] = `""`;
